fix spacing on in this series overview (#4335)

--- a/client/src/plus/deep-dives/overview/index.scss
+++ b/client/src/plus/deep-dives/overview/index.scss
@@ -164,6 +164,10 @@
       margin-left: 185px;
     }
 
+    h4 {
+      margin: math.div(layout.$base-spacing, 2) 0;
+    }
+
     p {
       margin-bottom: 0;
     }
@@ -184,6 +188,8 @@
   }
 
   .unavailable {
+    min-height: 140px;
+
     &::before {
       background: transparent url("./assets/unavailable.svg") center center
         no-repeat;
@@ -198,6 +204,14 @@
         position: absolute;
         width: 164px;
       }
+    }
+
+    h4 {
+      margin: math.div(layout.$base-spacing, 2) 0;
+    }
+
+    .item-content {
+      padding: math.div(layout.$base-spacing, 4);
     }
   }
 }
